--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,7 +7,7 @@
       name: "{{myubuntuwebpackage}}"
       state: present
     when: ansible_os_family =="Debian"
-  - name: I want to start webserver on ubuntu node
+  ##- name: I want to start webserver on ubuntu node
     service:
       name: "{{myubuntuwebpackage}}"
       state: restarted
@@ -16,8 +16,8 @@
      service:
        name: "{{myredhatwebpackage}}"
        state: started
-     when:  ansible_os_family =="RedHat"
-
+     when: ansible_os_family =="RedHat"
+   ##
 
 
 
