--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -8,15 +8,15 @@
       state: present
     when: ansible_os_family =="Debian"
   ##- name: I want to start webserver on ubuntu node
-    service:
-      name: "{{myubuntuwebpackage}}"
-      state: restarted
-      when: ansible_os_family =="Debian"
-   - name: I want to start webserver on redhat node
-     service:
-       name: "{{myredhatwebpackage}}"
-       state: started
-     when: ansible_os_family =="RedHat"
+  # service:
+     # name: "{{myubuntuwebpackage}}"
+    #  state: restarted
+    #  when: ansible_os_family =="Debian"
+   #- name: I want to start webserver on redhat node
+    # service:
+    #   name: "{{myredhatwebpackage}}"
+    #   state: started
+    # when: ansible_os_family =="RedHat"
    ##
 
 
