--- a/myjavainstall.yml
+++ b/myjavainstall.yml
@@ -2,14 +2,14 @@
 - hosts: mywebservers
   become: yes
   tasks:
- - name: Install java on ubuntu node
-    apt:
-   - name: openjdk-8-jre
-        state: present
-    when: ansible_os_family=="Debian"
-  -name: install java on RedHat nodes
-   yum:
-       - name: java-1.8.0-openjdk
+  -  name: Install java on ubuntu node
+     apt:
+     name: openjdk-8-jre
+       state: present
+   when: ansible_os_family=="Debian"
+  -  name: install java on RedHat nodes
+     yum:
+  - name: java-1.8.0-openjdk
      state: present
     when: ansible_os_family=="RedHat"
 
