--- a/myjavainstall.yml
+++ b/myjavainstall.yml
@@ -9,8 +9,8 @@
    when: ansible_os_family=="Debian"
   -  name: install java on RedHat nodes
      yum:
-  - name: java-1.8.0-openjdk
-     state: present
+       name: java-1.8.0-openjdk
+         state: present
     when: ansible_os_family=="RedHat"
 
    
